--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "eslint": "eslint --fix 'src/{js,components}/**/*.{js,vue}' --ignore-path .eslintignore",
     "test:watch": "NODE_ENV=test jest --watchAll --coverage",
     "dev:storybook": "start-storybook -c ./tools/.storybook/config/ -p 6006 -s ./public",
-    "upgrade-interactive": "npm-check --update"
+    "upgrade-interactive": "npm-check --update",
+    "test": "jest"
   },
   "dependencies": {
     "@storybook/addon-storysource": "^5.0.10",
@@ -26,20 +27,25 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
     "@storybook/addon-actions": "^5.0.10",
     "@storybook/addon-backgrounds": "^5.0.10",
     "@storybook/addon-knobs": "^5.0.10",
     "@storybook/addon-notes": "^5.0.10",
     "@storybook/vue": "^5.0.10",
     "@vitejs/plugin-legacy": "^2.0.1",
-    "@vue/test-utils": "^1.0.0-beta.29",
+    "@vue/test-utils": "^1.3.0",
+    "@vue/vue2-jest": "^28.1.0",
     "autoprefixer": "^9.4.7",
+    "babel-jest": "^29.1.2",
     "eslint": "^8.23.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.4.0",
-    "jest": "^24.7.1",
+    "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
     "jest-serializer-vue": "^2.0.2",
     "npm-check": "^6.0.1",
     "power-assert": "^1.6.1",
@@ -48,7 +54,6 @@
     "vite": "^3.0.8",
     "vite-plugin-checker": "^0.5.0",
     "vite-plugin-vue2": "^2.0.1",
-    "vue-jest": "^3.0.4",
     "vue-template-compiler": "^2.7.8"
   },
   "volta": {
