--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "liveServer.settings.root": "/dist",
   "jest.jestCommandLine": "npm run test --",
-  "jest.autoRun": { "watch": true }
+  "jest.autoRun": {
+    "watch": true
+  },
+  "liveServer.settings.port": 5501
 }
