--- a/.eslintrc
+++ b/.eslintrc
@@ -4,11 +4,7 @@
     "browser": true,
     "node": true
   },
-  "extends": [
-    "eslint:recommended",
-    "airbnb-base",
-    "plugin:vue/recommended"
-  ],
+  "extends": ["eslint:recommended", "airbnb-base", "plugin:vue/recommended"],
   "settings": {
     "import/resolver": {
       "alias": {
@@ -32,13 +28,16 @@
     "no-new": "off",
     "no-console": "error",
     "no-control-regex": "off",
-    "max-len": ["error", {
-      "code": 90,
-      "ignoreComments": true,
-      "ignoreTrailingComments": true,
-      "ignoreTemplateLiterals": true,
-      "ignoreUrls": true
-    }],
+    "max-len": [
+      "error",
+      {
+        "code": 90,
+        "ignoreComments": true,
+        "ignoreTrailingComments": true,
+        "ignoreTemplateLiterals": true,
+        "ignoreUrls": true
+      }
+    ],
     "no-irregular-whitespace": [
       "error",
       {
@@ -66,6 +65,7 @@
       }
     ],
     "vue/custom-event-name-casing": ["error", "kebab-case"],
-    "vue/multi-word-component-names": "off"
+    "vue/multi-word-component-names": "off",
+    "linebreak-style": "off"
   }
 }
