delete: 末尾の,を削除

--- a/.eslintrc
+++ b/.eslintrc
@@ -66,6 +66,6 @@
       }
     ],
     "vue/custom-event-name-casing": ["error", "kebab-case"],
-    "vue/multi-word-component-names": "off",
+    "vue/multi-word-component-names": "off"
   }
 }
