delete: 不要な記述の削除
おま環解決系の記述を削除

--- a/.eslintrc
+++ b/.eslintrc
@@ -66,7 +66,6 @@
       }
     ],
     "vue/custom-event-name-casing": ["error", "kebab-case"],
-    "vue/multi-word-component-names": "off",
-    "linebreak-style": "off"
+    "vue/multi-word-component-names": "off"
   }
 }
