--- a/package.json
+++ b/package.json
@@ -16,43 +16,43 @@
     "dev:storybook": "start-storybook -c ./tools/.storybook/config/ -p 6006 -s ./public"
   },
   "dependencies": {
-    "@storybook/addon-storysource": "^5.0.10",
+    "@storybook/addon-storysource": "^5.3.21",
     "axios": "^0.27.2",
-    "cookie-parser": "^1.4.4",
-    "highlight.js": "^9.15.6",
-    "http-errors": "^1.7.2",
-    "js-cookie": "^2.2.0",
-    "marked": "^0.6.2",
-    "vee-validate": "^2.2.7",
-    "vue": "^2.7.8",
-    "vue-router": "^3.6.4",
+    "cookie-parser": "^1.4.6",
+    "highlight.js": "^9.18.5",
+    "http-errors": "^1.8.1",
+    "js-cookie": "^2.2.1",
+    "marked": "^0.6.3",
+    "vee-validate": "^2.2.15",
+    "vue": "^2.7.14",
+    "vue-router": "^3.6.5",
     "vue-smoothscroll": "^0.2.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.0.10",
-    "@storybook/addon-backgrounds": "^5.0.10",
-    "@storybook/addon-knobs": "^5.0.10",
-    "@storybook/addon-notes": "^5.0.10",
-    "@storybook/vue": "^5.0.10",
-    "@vitejs/plugin-legacy": "^2.0.1",
-    "@vue/test-utils": "^1.0.0-beta.29",
-    "autoprefixer": "^9.4.7",
-    "eslint": "^8.26.0",
+    "@storybook/addon-actions": "^5.3.21",
+    "@storybook/addon-backgrounds": "^5.3.22",
+    "@storybook/addon-knobs": "^5.3.21",
+    "@storybook/addon-notes": "^5.3.21",
+    "@storybook/vue": "^5.3.21",
+    "@vitejs/plugin-legacy": "^2.3.1",
+    "@vue/test-utils": "^1.3.6",
+    "autoprefixer": "^9.8.8",
+    "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-vue": "^9.4.0",
-    "jest": "^24.7.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-vue": "^9.15.1",
+    "jest": "^24.9.0",
     "jest-serializer-vue": "^2.0.2",
     "power-assert": "^1.6.1",
-    "sass": "^1.54.4",
-    "storybook-vue-router": "^1.0.3",
-    "vite": "^3.0.8",
-    "vite-plugin-checker": "^0.5.0",
-    "vite-plugin-vue2": "^2.0.1",
-    "vue-jest": "^3.0.4",
-    "vue-template-compiler": "^2.7.8"
+    "sass": "^1.63.6",
+    "storybook-vue-router": "^1.0.7",
+    "vite": "^3.2.7",
+    "vite-plugin-checker": "^0.5.6",
+    "vite-plugin-vue2": "^2.0.3",
+    "vue-jest": "^3.0.7",
+    "vue-template-compiler": "^2.7.14"
   },
   "volta": {
     "node": "16.17.0",
