(再プルリク修正箇所：コンポーネントの削除、named: true;の削除、「削除」ボタンの活性化、その他不要箇所・差分の修正

--- a/.eslintrc
+++ b/.eslintrc
@@ -37,7 +37,7 @@
       "ignoreComments": true,
       "ignoreTrailingComments": true,
       "ignoreTemplateLiterals": true,
-      "ignoreUrls": true、
+      "ignoreUrls": true
     }],
     "no-irregular-whitespace": [
       "error",
