--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
     "MY_SESSION_STORAGE_KEY": true
   },
   "rules": {
+    "linebreak-style": ["error", "windows"], //後で消す
     "arrow-parens": ["error", "as-needed"],
     "no-new": "off",
     "no-console": "error",
